# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\MeController;
 use App\Http\Controllers\SecureHealthController;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
@@ -11,14 +12,18 @@ Route::prefix('v1')->group(function () {
     Route::prefix('/auth')->group(function () {
         Route::post('/login', [AuthController::class, 'login']);
         Route::post('/register', [AuthController::class, 'register']);
-        Route::post('/refresh', [AuthController::class, 'refresh']);
 
         Route::middleware('auth:api')->group(function () {
+            Route::post('/refresh', [AuthController::class, 'refresh']);
             Route::post('/logout', [AuthController::class, 'logout']);
         });
     });
     Route::middleware('auth:api')->group(function () {
         Route::get('/secure-health', [SecureHealthController::class, 'liveness']);
+        // Routes for the current authenticated user
+        Route::prefix('/me')->group(function () {
+            Route::put('/password', [MeController::class, 'changePassword']);
+        });
     });
 });
 
